Bug 209559 - Settings (places state, window size) are not remembered when cancelling file dialog
Summary: Settings (places state, window size) are not remembered when cancelling file ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.45.0
Platform: openSUSE Unspecified
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2009-10-05 20:32 UTC by Maciej Pilichowski
Modified: 2018-04-17 22:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.46
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2009-10-05 20:32:28 UTC
Version:            (using KDE 4.3.0)
Installed from:    SuSE RPMs

Run KNode for example, select message, save as, close places pane, cancel, save as again, places pane is shown.

Please, respect user wish -- remember not only the content of the places pane, but its state too.
Comment 1 Christoph Feck 2009-10-06 13:13:46 UTC
It works here for kwrite (even across sessions), so the problem is probably in KNode itself? Could you test which applications have the bug?
Comment 2 Maciej Pilichowski 2009-10-06 15:43:39 UTC
Application with such behaviour -- Kate, KMail, Konqueror, KWrite (!).

So what version of KDE are you using? Me -- KDE 4.3.1 (sorry for the typo while reporting).
Comment 3 Christoph Feck 2009-10-06 22:48:46 UTC
Sorry, I misread the description. The file dialog does not save settings if you "Cancel" it, this includes window size and other settings.

But added places are not removed when you cancel, so other settings should probably be kept, too. But it may be done on purpose, I will ask usability people.
Comment 4 Maciej Pilichowski 2009-10-07 09:45:36 UTC
In such case I would even enhance the wish -- remember places and other settings.

IOW -- cancel/accept is related to picking up the files, not to the size of the sorting order. 

One of many possible cases:
Kate has to open the picture from the summer, it is the biggest file in the folder "summer". She sorts the files, turn on preview, but it is not the desired file. She cancels file-open and call Jack. He explains the file is in the folder "summer2009". Now she has to do all the steps again --> bad.

Or simpler explanation -- now to set the "initial" settings to open-file dialog (like hidding places pane) user has to perform open or save. It is artificial requirement. It would be easier for user to bring the dialog, customize it, and close it.
Comment 5 Nate Graham 2018-04-13 15:10:31 UTC
Still an issue in KDE Frameworks 5.45. Any settings in the file dialog that you change (sort order, view mode, icon size etc) are not remembered if the user clicks the Cancel button. The changes are remembered if the user clicks the Open or Save button.
Comment 6 Nate Graham 2018-04-17 22:30:18 UTC
Git commit b49e4dd526f6f3495072d96a151ac439a811cb5c by Nathaniel Graham.
Committed on 17/04/2018 at 22:30.
Pushed by ngraham into branch 'master'.

Save the dialog view settings even when canceling

Summary:
Currently, for file Open & Save dialogs, any view settings you've changed are only remembered if you actually open or save the file; they're ignored if you cancel the dialog using the {nav Cancel} button.  there's no particular reason why a user should want to discard any view changes just because they decided not to open or save the file, so we should fix that.

This patch fixes a bug causing the issue: the attempt to write the changed view config settings was issued //after// the KDirOperator had already been destroyed, so its settings were unavailable to be saved. Reversing the ordering of the statements fixes the issue.
FIXED-IN: 5.46

Test Plan:
Open a file open or save dialog, change the view, hit the cancel button, then open it again.

Note: this patch does //not// fix the case of the view not being saved when closing the dialog via the Escape key or the titlebar close button; those cases need to be separately handled in the QPA theme plugin, which actually creates the dialog window; see D12239 and D12240.

Reviewers: #frameworks, davidedmundson

Reviewed By: davidedmundson

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12227

M  +1    -4    src/filewidgets/kfilewidget.cpp

https://commits.kde.org/kio/b49e4dd526f6f3495072d96a151ac439a811cb5c
Comment 7 Nate Graham 2018-04-17 22:31:14 UTC
Git commit 7b742db8ddfd935c1f3c77c3f814d0d762ca5369 by Nathaniel Graham.
Committed on 17/04/2018 at 22:31.
Pushed by ngraham into branch 'master'.

Save the dialog view settings when closing the dialog without hitting the cancel button

Summary:
Save the view settings when the user closes the dialog using the excape key or the titlebar close button. Completes the feature requested in 209559.

Depends on D12227

Test Plan: Compile and deploy change, open Kate, open a file open or save dialog, change some settings, hit the escape key or the titlebar cancel button, then open a dialog again

Reviewers: #frameworks, davidedmundson

Reviewed By: davidedmundson

Subscribers: anthonyfieroni, elvisangelaccio, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D12240

M  +4    -0    src/platformtheme/kdeplatformfiledialoghelper.cpp

https://commits.kde.org/plasma-integration/7b742db8ddfd935c1f3c77c3f814d0d762ca5369